alignment change issue

--- a/src/App.css
+++ b/src/App.css
@@ -224,7 +224,7 @@
   font-weight: 660;
 }
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1200px) {
   .backDrop {
     z-index: 1;
     position: absolute;
@@ -235,7 +235,7 @@
     position: absolute;
     margin-left: 12%;
     margin-right: 12%;
-    margin-top: 50%;
+    margin-top: 24vw;
     box-shadow: 0 7px 10px rgba(0, 0, 0, 0.3);
   }
 
